# seedance-transfer

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  dialogue.md  docker-compose.init-ssl.yml  docker-compose.yml  flux-diag.sh  memory.md  railway.json  record.md  run-tests.sh  todo-list.md
.github/workflows/: ci.yml  publish-comfy.yml
Seedance/: .gitignore  CLAUDE.md
Seedance/backend/: .env.example  Dockerfile  config.py  db.py  deploy-ecs.sh  docker-compose.yml  log_config.py  main.py  nginx-init.conf  nginx.conf  requirements.txt  ruff.toml  schema.sql  sse_broker.py  start.sh  store.py  test_api.py  test_e2e.py  test_evolink.py  test_flow.py
backend/: .env.example  .gitignore  Dockerfile  docker-compose.intl.yml  package-lock.json  package.json
backend/config/: cn.yaml  intl.yaml
backend/src/: config.ts  server.ts  types.ts
comfyui-seedance-wizard/: LICENSE  README.md  USER_GUIDE.md  __init__.py  comfyui-manager.json  nodes.py  pyproject.toml
comfyui-seedance-wizard/web/: filter-preview.js  i18n.js  main.js  wizard.css  wizard.html
comfyui-seedance-wizard/web/i18n/: en.json  zh.json
contract/: api-spec.yaml  db-schema.sql  node-interface.md  recon-report.md
deploy/: README.md  backup-entry.sh  backup.sh  certbot-init.sh  deploy.sh  ecosystem.config.js  nginx.conf  update.sh
docs/: promo-copy.md
web-portal/: .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
web-portal/app/: globals.css  layout.tsx  page.tsx
web-portal/components/: ApiKeyCard.tsx  BalanceCard.tsx  Navbar.tsx  (+5 more)
(+67 files in other folders)
