[project]
name = "comfyui-seedance-wizard"
description = "AI video creation wizard — chat with AI director, analyze images, generate previews, and render with Seedance 2.0, Kling, Veo, and 15+ models — all inside ComfyUI"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/liuhongyi0/seedance-transfer"

[tool.comfy]
PublisherId = "seedance-studios"
DisplayName = "Seedance Wizard"
Icon = ""
